SERVER-52678 Ensure SBE plan trees are attached to the OperationContext prior to yielding